Thu Aug 26 10:20:41 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.cpp:
          Changes implementing the patches from Bugzilla #3653 (with
          changes and some rejects; *no* asserts allowed in ACE).

Wed Aug 25 19:58:19 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.{h cpp}: Regarding change number 2 at
          Fri Mar 26 14:07:55 UTC 2010  Steve Huston  <shuston@riverace.com>
          dispatching notifies in only one thread at a time was 1) wrong
          (TP_Reactor doesn't do this), 2) broke important existing
          applications at a customer site. This has been fixed so that the
          notify dispatch behavior is like ACE_TP_Reactor: when the
          notify handle is signaled, extract one notification, release
          the token, dispatch the notification. Thus, each thread will
          dispatch one notification, and multiple threads can dispatch
          them at the same time if there are multiples.
        
          Also fixed an error where it was possible to lose notice of a
          notification. Resolves Bugzilla #3328.

Wed Aug 25 09:49:41 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * ace/Arg_Shifter.h:
        * ace/config-macosx-leopard.h:
        * ace/Guard_T.h:
        * ace/Global_Macros.h:
          Selected changes from patches in Bugzilla 3652.

Tue Aug 24 14:21:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.h:
          Layout changes

        * ace/config-win32-common.h:
          Improved MinGW GCC 4.4 support. Thanks to
          Jani Hakala <jani dot j dot hakala at jyu dot fi> for creating the
          patch

Tue Aug 24 14:15:45 UTC 2010 Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * ace/Log_Msg.cpp
        * ace/Log_Msg.h
        * tests/Log_Msg_Test.cpp
        Revert changes for logging thread id as argument.

Tue Aug 24 12:59:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
